# infostream

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
btool/: __init__.py
btool/zig-adapters/x86_64-apple-darwin/: ar  cc
btool/zig-adapters/x86_64-pc-windows-gnu/: ar  cc
btool/zig-adapters/x86_64-unknown-linux-gnu/: ar  cc
infostream-desktop/: Cargo.toml  build.rs
infostream-desktop/src/: infostream.rs
infostream-lib/: Cargo.toml
infostream-lib/src/: lib.rs
tests/: Cargo.toml  test_test.rs
