[package]
name = "infostream-desktop"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2021"

[[bin]]
name = "infostream"
path = "src/infostream.rs"

[dependencies]
infostream = { path = "../infostream-lib" }


[target.x86_64-pc-windows-gnu.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[build-dependencies]
winres = "0.1"


