[package]
name = "infostream"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2021"

[lib]
#crate-type = ["cdylib", "staticlib", "rlib"]
# cdylib fails to build on windorks -_-
crate-type = ["staticlib", "rlib"]

[dependencies]
url = { version = "2", features = ["serde"] }

